--- a/about.html
+++ b/about.html
@@ -1,40 +1,113 @@
-<!DOCTYPE html><html lang="en"><head><title>About | Sahithyan</title><meta name="description" content="A teen front-end developer, a student and a tech enthusiast." /><meta charSet="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" /><link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /><link rel="alternate" href="https://sahithyandev.github.io/feed.xml" type="application/rss+xml" title="RSS feed" /><meta name="twitter:card" content="summary_large_image" /><meta name="twitter:site" content="@sahithyandev" /><meta property="og:type" content="website" /><meta property="og:description" content="A teen front-end developer, a student and a tech enthusiast." /><meta property="og:title" content="About | Sahithyan" /><meta property="og:url" content="sahithyandev.github.io" /><meta property="og:site_name" content="Sahithyan" /><meta property="og:image" content="https://sahithyandev.github.io/og-image-base.png" /><meta property="og:image:alt" content="Sahithyan's official profile picture" /><link rel="preconnect" href="https://fonts.googleapis.com" /><link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin /><link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" as="style" id="google-fonts-link" /><script>
-					document.getElementById('google-fonts-link').onload = function() {
-						this.onload = null;
-						this.rel = 'stylesheet';
-					}</script><noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" rel="stylesheet" type="text/css" /></noscript><script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script><link rel="stylesheet" href="/global.css" /><link rel="stylesheet" href="/page-about.css" /><script>
-					if ("serviceWorker" in navigator) {
-						navigator.serviceWorker.register("/service-worker.js")
-							.catch(error => {
-								console.error("Error while initializing service worker", error);
-							});
-					}
-				</script><script>const props = {"componentName":"About","headProps":{"title":"About | Sahithyan","lastModifiedTime":"2021-08-14"}}</script></head><body><nav><a href="/" class="nav--logo ">sahithyan</a><ul><li><a href="/posts" class="nav--link ">Posts</a></li><li><a href="/about" class="nav--link ">About</a></li></ul></nav><main><h1>About</h1><p>Hello!, I am Sahithyan, a 17-year-old web developer, a student and a tech enthusiast. I am from Jaffna, Sri Lanka.</p><p>I know HTML, CSS, JavaScript and TypeScript.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" rel="noopener noreferrer" target="_blank" class=" styled-link">@sahithyandev</a>. You can also use the below-listed social media accounts too. And you can also email me at <a href="mailto:sahithyan2701@gmail.com" rel="noopener noreferrer" target="_blank" class=" styled-link">sahithyan2701@gmail.com</a>.</p><div class="social-links"><a title="Twitter (sahithyandev)" href="https://www.twitter.com/sahithyandev" rel="noopener noreferrer" target="_blank" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
+<!DOCTYPE html><html lang="en"><head>
+		<title>About | Sahithyan</title>
+		<meta name="description" content="A teen front-end developer, a student and a tech enthusiast.">
+
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="alternate" href="https://sahithyandev.github.io/feed.xml" type="application/rss+xml" title="RSS feed">
+
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@sahithyandev">
+
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="A teen front-end developer, a student and a tech enthusiast.">
+		<meta property="og:title" content="About | Sahithyan">
+		<meta property="og:url" content="sahithyandev.github.io">
+		<meta property="og:site_name" content="Sahithyan">
+		<meta property="og:image" content="https://sahithyandev.github.io/og-image-base.png">
+		<meta property="og:image:alt" content="Sahithyan">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" as="style" onload="this.onload=null; this.rel='stylesheet'" id="google-fonts-link">
+
+		<noscript>
+			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" type="text/css" />
+		</noscript>
+
+		<script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async="" defer=""></script>
+
+		<link rel="stylesheet" href="/global.css">
+
+		<script>
+			if ("serviceWorker" in navigator) {
+				navigator.serviceWorker
+					.register("/service-worker.js")
+					.catch((error) => {
+						console.error("Error while initializing service worker", error);
+					});
+			}
+		</script>
+
+		<script>
+			let pageData;
+			try {
+				pageData = JSON.parse(`%PAGE_DATA%`);
+			} catch (e) {
+				console.warn("pageData error", e);
+			}
+		</script>
+	<style>.social-links {
+  display: flex;
+  gap: 0.5rem;
+  margin: 0.5rem auto 0;
+  width: fit-content;
+}
+.social-links a {
+  transition: opacity cubic-bezier(0.6, 0, 0.3, 1) 150ms;
+  opacity: 0.6;
+}
+.social-links a:hover {
+  opacity: 1;
+}
+
+.styled-link {
+  color: var(--secondary);
+  transition: all cubic-bezier(0.4, 0, 0.2, 1) 150ms;
+  text-decoration: underline;
+}
+
+.styled-link:hover {
+  color: var(--secondary-dark);
+}</style><link rel="stylesheet" href="/page-about.css"></head>
+
+	<body>
+		<div id="root"><nav><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>About</h1><p>Hello!, I am Sahithyan, a 17-year-old web developer, a student and a tech enthusiast. I am from Jaffna, Sri Lanka.</p><p>I know HTML, CSS, JavaScript and TypeScript.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" styled-link">@sahithyandev</a>. You can also use the below-listed social media accounts too. And you can also email me at <a href="mailto:sahithyan2701@gmail.com" target="_blank" rel="noopener noreferrer" class=" styled-link">sahithyan2701@gmail.com</a>.</p><div class="social-links"><a title="Twitter (sahithyandev)" href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
 </svg>
 
 
-</a><a title="Instagram (sahithyan_)" href="https://www.instagram.com/sahithyan_" rel="noopener noreferrer" target="_blank" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <rect x="4" y="4" width="16" height="16" rx="4" />
-  <circle cx="12" cy="12" r="3" />
-  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+</a><a title="Instagram (sahithyan_)" href="https://www.instagram.com/sahithyan_" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <rect x="4" y="4" width="16" height="16" rx="4"></rect>
+  <circle cx="12" cy="12" r="3"></circle>
+  <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
 </svg>
 
 
-</a><a title="GitHub (sahithyandev)" href="https://www.github.com/sahithyandev" rel="noopener noreferrer" target="_blank" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+</a><a title="GitHub (sahithyandev)" href="https://www.github.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
 </svg>
 
 
-</a><a title="RSS Feed" href="https://sahithyandev.github.io/feed.xml" rel="noopener noreferrer" target="_blank" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-rss" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-  <circle cx="5" cy="19" r="1" />
-  <path d="M4 4a16 16 0 0 1 16 16" />
-  <path d="M4 11a9 9 0 0 1 9 9" />
+</a><a title="RSS Feed" href="https://sahithyandev.github.io/feed.xml" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-rss" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+  <circle cx="5" cy="19" r="1"></circle>
+  <path d="M4 4a16 16 0 0 1 16 16"></path>
+  <path d="M4 11a9 9 0 0 1 9 9"></path>
 </svg>
 
 
-</a></div></main><footer>© Sahithyan 2021</footer></body></html>
+</a></div></main><footer>© Sahithyan 2021</footer></div>
+		
+		
+	
+
+</body></html>
