Update from https://github.com/sahithyandev/static-blog/commit/78828c4d68777908bceb1a39e7a14379b44eccdb

--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@ body {
 }</style><link rel="stylesheet" href="/page-404.css"></head>
 
 	<body>
-		<div id="root"><nav><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
+		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
 		
 		
 	
