--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" as="style" onload="this.onload=null; this.rel='stylesheet'" id="google-fonts-link">
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&amp;display=swap" as="style" onload="this.onload=null; this.rel='stylesheet'" id="google-fonts-link">
 
 		<noscript>
 			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" type="text/css" />
@@ -163,8 +163,8 @@
 
 
 </a></div></div><section><h2 class="sub-heading">Recent Posts</h2><div class="posts-container"><div class="post-card show" data-slug="a-javascript-quiz"><span class="post-released-date">17 September 2021</span><a href="/post/a-javascript-quiz" data-is-internal="" class=" "><h3 class="title">A JavaScript Quiz — Explained</h3></a><p class="description">Explanation of an amazing quiz I took an year ago.</p><div class="tags-container"><span class="tag">explanation</span></div></div><div class="post-card show" data-slug="building-xcalc"><span class="post-released-date">10 June 2021</span><a href="/post/building-xcalc" data-is-internal="" class=" "><h3 class="title">Story of Building XCalc</h3></a><p class="description">Sharing how I built XCalc, an extended calculator.</p><div class="tags-container"><span class="tag">experience</span><span class="tag">project</span></div></div><div class="post-card show" data-slug="javascript-shorthands"><span class="post-released-date">7 April 2021</span><a href="/post/javascript-shorthands" data-is-internal="" class=" "><h3 class="title">JavaScript Shorthands</h3></a><p class="description">Do you write JavaScript a lot? These shorthands might be helpful to you.</p><div class="tags-container"><span class="tag">javascript</span></div></div><div class="post-card show" data-slug="divisibility-rules"><span class="post-released-date">27 February 2021</span><a href="/post/divisibility-rules" data-is-internal="" class=" "><h3 class="title">Divisibility Rules - An Explanation</h3></a><p class="description">How much time would you need to check if a given number is divisible by 2 –15 without a computer? Well, for the first few numbers, you would be so fast. But you will get stuck at 7 or 13 right? Don't worry. After reading this article, you won't. Give it a try.</p><div class="tags-container"><span class="tag">mathematics</span></div></div></div></section></main><footer>© Sahithyan 2021</footer></div>
-		
-		
+		<script src="/lib-preact.js"></script>
+		<script id="main-script" defer="" src="/index.js"></script>
 	
 
 </body></html>
