--- a/404.html
+++ b/404.html
@@ -72,9 +72,9 @@ body {
 }</style><link rel="stylesheet" href="/page-404.css"></head>
 
 	<body>
-		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
-		
-		
+		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
+		<script src="/lib-preact.js"></script>
+		<script id="main-script" defer="" src="/404.js"></script>
 	
 
 </body></html>
