--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 }</style><link rel="stylesheet" href="/page-about.css"></head>
 
 	<body>
-		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>About</h1><p>Hello!, I am Sahithyan, a 17-year-old web developer, a student and a tech enthusiast. I am from Jaffna, Sri Lanka.</p><p>I know HTML, CSS, JavaScript and TypeScript.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" styled-link">@sahithyandev</a>. You can also use the below-listed social media accounts too. And you can also email me at <a href="mailto:sahithyan2701@gmail.com" target="_blank" rel="noopener noreferrer" class=" styled-link">sahithyan2701@gmail.com</a>.</p><div class="social-links"><a title="Twitter (sahithyandev)" href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>About</h1><p>Hello!, I am Sahithyan, a 17-year-old web developer, a student and a tech enthusiast. I am from Jaffna, Sri Lanka.</p><p>I know HTML, CSS, JavaScript and TypeScript.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" styled-link">@sahithyandev</a>. You can also use the below-listed social media accounts too. And you can also email me at <a href="mailto:sahithyan2701@gmail.com" target="_blank" rel="noopener noreferrer" class=" styled-link">sahithyan2701@gmail.com</a>.</p><div class="social-links"><a title="Twitter (sahithyandev)" href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
   <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
 </svg>
@@ -106,8 +106,8 @@
 
 
 </a></div></main><footer>© Sahithyan 2021</footer></div>
-		
-		
+		<script src="/lib-preact.js"></script>
+		<script id="main-script" defer="" src="/about.js"></script>
 	
 
 </body></html>
