Update from https://github.com/sahithyandev/static-blog/commit/4801c34c4b729df6379c45a6c56f8711684aeab0

--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
 }
 
 .project-card {
-  padding: 24px 16px;
+  padding: 18px 22px;
   border-radius: 5px;
   font-size: 0.9rem;
   background-color: var(--project-card-bg);
@@ -87,9 +87,11 @@
   margin-top: 0;
   margin-bottom: 20px;
   font-size: 1.2rem;
+  color: var(--secondary);
 }
 .project-card .project-description {
   max-width: 90%;
+  margin-bottom: 18px;
 }
 .project-card .project-links {
   display: flex;
@@ -110,7 +112,7 @@
 }</style><link rel="stylesheet" href="/page-projects.css"></head>
 
 	<body>
-		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>Projects</h1><p>Here the projects I worked on recently.</p><section class="projects-container"><div class="project-card"><h2 class="project-name">Gallery Of JE</h2><p class="project-description">A website to host the retouched photos by Janoshan, one of my classmates.</p><div class="project-links"><a href="https://github.com/sahithyandev/gallery-of-je" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://gallery-of-je.vercel.app" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a></div></div><div class="project-card"><h2 class="project-name">YouTubeDownloader Bot</h2><p class="project-description">A bot that allows Viber users to download YouTube videos straight from Viber.</p><div class="project-links"><a href="https://github.com/sahithyandev/youtube-downloader-bot" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://youtube-downloader-viber-bot.herokuapp.com" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a></div></div><div class="project-card"><h2 class="project-name">XCalc</h2><p class="project-description">An extended calculator. A calculator which has functions that a pre-installed one doesn't. Like gcm, lcd, is-prime and more. Available on Google Play Store as well as a website.</p><div class="project-links"><a href="https://github.com/sahithyandev/xcalc" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://x-calc.vercel.app" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a><a href="/post/building-xcalc" data-is-internal="" class=" styled-link">Write Up</a></div></div></section></main><footer>© Sahithyan 2021</footer></div>
+		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>Projects</h1><p>Here the projects I worked on recently.</p><section class="projects-container"><div class="project-card"><h2 class="project-name">Gallery Of JE</h2><p class="project-description">A website full of high-quality retouched photos by Janoshan, one of my friends.</p><div class="project-links"><a href="https://github.com/sahithyandev/gallery-of-je" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://gallery-of-je.vercel.app" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a></div></div><div class="project-card"><h2 class="project-name">YouTubeDownloader Bot</h2><p class="project-description">A Viber bot to download YouTube videos easily.</p><div class="project-links"><a href="https://github.com/sahithyandev/youtube-downloader-bot" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://youtube-downloader-viber-bot.herokuapp.com" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a></div></div><div class="project-card"><h2 class="project-name">XCalc</h2><p class="project-description">An extended calculator. A calculator which has functions that a pre-installed one doesn't. Like gcm, lcd, is-prime and more. Available on Google Play Store as well as a website.</p><div class="project-links"><a href="https://github.com/sahithyandev/xcalc" target="_blank" rel="noopener noreferrer" class=" styled-link">Source</a><a href="https://x-calc.vercel.app" target="_blank" rel="noopener noreferrer" class=" styled-link">Demo</a><a href="/post/building-xcalc" data-is-internal="" class=" styled-link">Write Up</a></div></div></section></main><footer>© Sahithyan 2021</footer></div>
 		<script src="/lib-preact.js"></script>
 		<script id="main-script" defer="" src="/projects.js"></script>
 	
