Update from https://github.com/sahithyandev/static-blog/commit/ef132594857f5fe8dc8ffa1c03539dc4889e235a

--- a/404.html
+++ b/404.html
@@ -69,7 +69,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}</style><link rel="stylesheet" href="/page-404.css"></head>
+}</style></head>
 
 	<body>
 		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><div id="main"><h1>$&gt;&gt; paGe n0t found</h1></div><footer>© Sahithyan 2021</footer></div>
