--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
 .styled-link:hover {
   color: var(--secondary-dark);
-}</style><link rel="stylesheet" href="/page-about.css"></head>
+}</style></head>
 
 	<body>
 		<div id="root"><nav class="desktop"><a href="/" class="nav--logo " data-is-internal="">sahithyan</a><ul><li><a href="/projects" class="nav--link " data-is-internal="">Projects</a></li><li><a href="/posts" class="nav--link " data-is-internal="">Posts</a></li><li><a href="/about" class="nav--link " data-is-internal="">About</a></li></ul></nav><main><h1>About</h1><p>Hello!, I am Sahithyan, a 17-year-old web developer, a student and a tech enthusiast. I am from Jaffna, Sri Lanka.</p><p>I know HTML, CSS, JavaScript and TypeScript.</p><h2>Contact me</h2><p>The fastest and the easiest way would be direct messaging me on Twitter <a href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" styled-link">@sahithyandev</a>. You can also use the below-listed social media accounts too. And you can also email me at <a href="mailto:sahithyan2701@gmail.com" target="_blank" rel="noopener noreferrer" class=" styled-link">sahithyan2701@gmail.com</a>.</p><div class="social-links"><a title="Twitter (sahithyandev)" href="https://www.twitter.com/sahithyandev" target="_blank" rel="noopener noreferrer" class=" "><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
