Update from https://github.com/sahithyandev/static-blog/commit/f2c422b43d23c1789324fe0648d26b99e7900356

--- a/posts.html
+++ b/posts.html
@@ -112,7 +112,7 @@
 }
 .search-container input[type=text]::placeholder {
   opacity: 0.8;
-  color: var(--light);
+  color: var(--font-color);
   user-select: none;
 }
 .search-container input[type=text]:disabled {
