Update from https://github.com/sahithyandev/static-blog/commit/4383470900bfae947f69da863c81ab2779337f33

--- a/posts.html
+++ b/posts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
 		<title>Posts | Sahithyan</title>
-		<meta name="description" content="A teen front-end developer, a student and a tech enthusiast.">
+		<meta name="description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka.">
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,7 @@
 		<meta name="twitter:site" content="@sahithyandev">
 
 		<meta property="og:type" content="website">
-		<meta property="og:description" content="A teen front-end developer, a student and a tech enthusiast.">
+		<meta property="og:description" content="The website/blog of Sahithyan, A teen front-end developer, a student and a tech enthusiast from Jaffna, Sri Lanka.">
 		<meta property="og:title" content="Posts | Sahithyan">
 		<meta property="og:url" content="sahithyandev.github.io">
 		<meta property="og:site_name" content="Sahithyan">
